[fix]readable

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ body {
   min-width: 100vw;
 }
 
-.body_bg_color {
+.body_background_color {
   background-color: rgba(166, 206, 57, .15);
   height: 100vh;
 }
